--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "description": "Very simple Cookie and PHP Session library",
     "license": "MIT",
-    "name": "fkooman/php-secookie",
+    "name": "fkooman/secookie",
     "require": {
         "php": ">=5.4"
     },
