--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "license": "MIT",
     "name": "fkooman/secookie",
     "require": {
+        "ext-date": "*",
+        "ext-session": "*",
         "php": ">=5.4"
     },
     "require-dev": {
