--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: php-secookie
 Section: web
 Priority: optional
 Maintainer: Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), phpunit
 Standards-Version: 3.9.8
 Homepage: https://github.com/fkooman/php-secookie
 
